--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -5,8 +5,6 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="keywords" content="concatate, conocenos">
-	<meta name="description" content="Encontra en nuestra pagina, todos los productos que hacen a tu felicidad">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 	<link rel="stylesheet" href="../css/estilos2.css">
@@ -18,41 +16,44 @@
 	<nav class="navegador">
 		<div class="logo mx-auto d-block text-center d-none d-sm-none d-md-block">
 			<h1 class="fs-5 p-0 m-0 small fw-light">Contacto</h1>
-			<a href="../index.html"><img src="../image/envio.png" title="envio" alt="envio" class="img-envio"></a> 
+			<img src="../Image/envio.png" alt="envio" class="img-envio">
 		</div>
 
 		<div class="titulo">
-			<h2>Lleva y Trae</h2>
+			<h1>Lleva y Trae</h1>
 		</div>
 
 
 		<div class="menu d-flex align-items-center">
 			<div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-				<input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off">
+				<input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
 				<label class="btn btn-outline-dark" for="btnradio1">
-					<a href="../index.html" class="text-decoration-none text-reset">Inicio </a>
+					<p>Inicio</p>
 				</label>
 
 				<input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
 				<label class="btn btn-outline-dark" for="btnradio2">
-					<a href="productos.html" class="text-decoration-none text-reset">Productos </a>
+					<p>Productos</p>
 				</label>
 
 				<input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
 				<label class="btn btn-outline-dark" for="btnradio3">
-					<a href="quienes-somos.html" class="text-decoration-none text-reset">Quienes Somos </a>
-				</label>
-
-				<input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off" checked>
-				<label class="btn btn-outline-dark" for="btnradio3">
-					<a href="contacto.html" class="text-decoration-none text-reset">Contacto </a>
+					<p>Quienes Somos</p>
 				</label>
 
 				<input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
 				<label class="btn btn-outline-dark" for="btnradio3">
-					<a href="preguntas-frecuentes.html" class="text-decoration-none text-reset">Preguntas Frecuentes</a>
+					<p>Contacto</p>
 				</label>
+
+				<input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
+				<label class="btn btn-outline-dark" for="btnradio3">
+					<p>Preguntas Frecuentes</p>
+				</label>
+
+
 			</div>
+
 		</div>
 
 		<div class="buscador d-none d-sm-none d-md-block">
@@ -139,24 +140,33 @@
 					<div class="d-flex justify-content-center">
 						<button type="button" class="btn btn-secondary ">Enviar</button>
 					</div>
+		
+
 				</div>
+
+		
+
+
 			</div>
+
+			>
 		</div>
+
 	</main>
 
 
-	<footer class="footer justify-content-center">
+	<footer class="footer">
 		<div class="div-wpp">
 			<p class="texto-wpp">291-12345678</p>
-			<img src="../image/whatsapp.png" title="whatsapp" alt="whatsapp" class="img-wpp">
+			<img src="../image/whatsapp.png" alt="whatsapp" class="img-wpp">
 		</div>
 		<div class="div-face">
 			<p class="texto-face">/Llevaytrae</p>
-			<img src="../image/facebook.png" title="facebook" alt="facebook" class="img-face">
+			<img src="../image/facebook.png" alt="facebook" class="img-face">
 		</div>
 		<div class="div-insta">
 			<p class="texto-insta">/Llevaytrae</p> 
-			<img src="../image/instagram.png" title="instagram" alt="instagram" class="img-insta">
+			<img src="../image/instagram.png" alt="instagram" class="img-insta">
 		</div>
 	</footer>
 
