--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -5,13 +5,11 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="keywords" content="productos, ofertas, hotsale">
+	<meta name="description" content="Encontra en nuestra pagina, todos los productos que hacen a tu felicidad">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-	<link rel="stylesheet" href="../css/estilos2.css">
-<<<<<<< HEAD
-=======
-	
->>>>>>> 1e83b04978d4c1bae366698974ba0a488c3486f7
+	<link rel="stylesheet" href="../css/estilos-sass.css">
 	<title>Lleva y trae</title>
 </head>
 
@@ -20,39 +18,39 @@
 	<nav class="navegador">
 		<div class="logo mx-auto d-block text-center d-none d-sm-none d-md-block">
 			<h1 class="fs-5 p-0 m-0 small fw-light">Productos</h1>
-			<img src="../image/envio.png" alt="envio" class="img-envio">
+			<a href="../index.html"><img src="../image/envio.png" alt="envio" title="img-envio" class="img-envio"></a> 
 		</div>
 
 		<div class="titulo">
-			<h1>Lleva y Trae</h1>
+			<h2>Lleva y Trae</h2>
 		</div>
 
 
 		<div class="menu d-flex align-items-center">
 			<div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-				<input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
+				<input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off">
 				<label class="btn btn-outline-dark" for="btnradio1">
-					<p>Inicio</p>
+					<a href="../index.html" class="text-decoration-none text-reset">Inicio </a>
 				</label>
 
-				<input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
+				<input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off" checked>
 				<label class="btn btn-outline-dark" for="btnradio2">
-					<p>Productos</p>
+					<a href="productos.html" class="text-decoration-none text-reset">Productos </a>
 				</label>
 
 				<input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
 				<label class="btn btn-outline-dark" for="btnradio3">
-					<p>Quienes Somos</p>
+					<a href="quienes-somos.html" class="text-decoration-none text-reset">Quienes Somos </a>
 				</label>
 
 				<input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
 				<label class="btn btn-outline-dark" for="btnradio3">
-					<p>Contacto</p>
+					<a href="contacto.html" class="text-decoration-none text-reset">Contacto </a>
 				</label>
 
 				<input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
 				<label class="btn btn-outline-dark" for="btnradio3">
-					<p>Preguntas Frecuentes</p>
+					<a href="preguntas-frecuentes.html" class="text-decoration-none text-reset">Preguntas Frecuentes</a>
 				</label>
 
 
@@ -61,8 +59,8 @@
 		</div>
 
 		<div class="buscador d-none d-sm-none d-md-block">
-			<label class="buscador-content">
-				<input type="search" placeholder="Necesito..." class="necesito mt-3"></imput>
+			<label class="buscador-content align-items-center mt-3">
+				<input type="search" placeholder="Necesito..." class="necesito"></imput>
 			</label>
 		</div>
 	</nav>
@@ -78,18 +76,18 @@
 			</h2>
 		</div>
 
-		<div class="categorias d-none d-sm-none d-md-none d-lg-flex">
+		<div class="categorias d-none d-sm-none d-md-none d-lg-flex align-items-center">
 			<ul class="listado">
-				<li><a href="#"> Tecnologia</a></li>
-				<li><a href="#"> Moda </a></li>
-				<li><a href="#">Deco Hogar</a></li>
-				<li><a href="#"> Electrodomesticos</a></li>
-				<li><a href="#"> Herramientas </a></li>
-				<li><a href="#"> Deportes y Fitness</a></li>
-				<li><a href="#"> Suplementos dietarios</a></li>
-				<li><a href="#">PetShop</a></li>
-				<li><a href="#"> Novedades</a></li>
-				<li><a href="#"> Mas Vendidos </a></li>
+				<li><a href="productos.html"> Tecnologia</a></li>
+				<li><a href="productos.html"> Moda </a></li>
+				<li><a href="productos.html">Deco Hogar</a></li>
+				<li><a href="productos.html"> Electrodomesticos</a></li>
+				<li><a href="productos.html"> Herramientas </a></li>
+				<li><a href="productos.html"> Deportes y Fitness</a></li>
+				<li><a href="productos.html"> Suplementos dietarios</a></li>
+				<li><a href="productos.html">PetShop</a></li>
+				<li><a href="productos.html"> Novedades</a></li>
+				<li><a href="productos.html"> Mas Vendidos </a></li>
 			</ul>
 		</div>
 
@@ -99,7 +97,7 @@
 				<div class="card mb-3 productos-area" style="max-width: 540px;">
 					<div class="row g-0">
 						<div class="col-md-4 d-flex align-items-center">
-							<img src="../Image/gamer.jpg" class="img-fluid rounded-start" alt="...">
+							<img src="../image/gamer.jpg" title="silla" class="img-fluid rounded-start" alt="silla">
 						</div>
 						<div class="col-md-8">
 							<div class="card-body">
@@ -121,7 +119,7 @@
 				<div class="card mb-3 productos-area" style="max-width: 540px;">
 					<div class="row g-0">
 						<div class="col-md-4 d-flex align-items-center">
-							<img src="../Image/pava.jpg" class="img-fluid rounded-start" alt="...">
+							<img src="../image/pava.jpg" class="img-fluid rounded-start" title="pava" alt="pava">
 						</div>
 						<div class="col-md-8">
 							<div class="card-body">
@@ -143,7 +141,7 @@
 				<div class="card mb-3 productos-area" style="max-width: 540px;">
 					<div class="row g-0">
 						<div class="col-md-4 d-flex align-items-center">
-							<img src="../Image/sillon.jpg" class="img-fluid rounded-start" alt="...">
+							<img src="../image/sillon.jpg" class="img-fluid rounded-start" title="sillon" alt="sillon">
 						</div>
 						<div class="col-md-8">
 							<div class="card-body">
@@ -164,7 +162,7 @@
 				<div class="card mb-3 productos-area" style="max-width: 540px;">
 					<div class="row g-0">
 						<div class="col-md-4 d-flex align-items-center">
-							<img src="../Image/notebook.png" class="img-fluid rounded-start" alt="...">
+							<img src="../image/notebook.png" class="img-fluid rounded-start" title="notebook" alt="notebook">
 						</div>
 						<div class="col-md-8">
 							<div class="card-body">
@@ -191,7 +189,7 @@
 				<div class="card mb-3 productos-area" style="max-width: 540px;">
 					<div class="row g-0">
 						<div class="col-md-4 d-flex align-items-center">
-							<img src="../Image/tv2.jpg" class="img-fluid rounded-start" alt="...">
+							<img src="../image/tv2.jpg" class="img-fluid rounded-start" title="tv2" alt="tv2">
 						</div>
 						<div class="col-md-8">
 							<div class="card-body">
@@ -221,18 +219,18 @@
 
 	</main>
 
-	<footer class="footer">
+	<footer class="footer justify-content-center">
 		<div class="div-wpp">
 			<p class="texto-wpp">291-12345678</p>
-			<img src="../image/whatsapp.png" alt="whatsapp" class="img-wpp">
+			<img src="../image/whatsapp.png" title="whatsapp" alt="whatsapp" class="img-wpp">
 		</div>
 		<div class="div-face">
 			<p class="texto-face">/Llevaytrae</p>
-			<img src="../image/facebook.png" alt="facebook" class="img-face">
+			<img src="../image/facebook.png" title="facebook" alt="facebook" class="img-face">
 		</div>
 		<div class="div-insta">
-			<p class="texto-insta">/Llevaytrae</p> 
-			<img src="../image/instagram.png" alt="instagram" class="img-insta">
+			<p class="texto-insta">/Llevaytrae</p>
+			<img src="../image/instagram.png" title="instagram" alt="instagram" class="img-insta">
 		</div>
 	</footer>
 
